--- a/app/public/manifest.json
+++ b/app/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "app",
-  "short_name": "app",
+  "name": "Countup!!",
+  "short_name": "Countup!!",
   "icons": [
     {
       "src": "./img/icons/android-chrome-192x192.png",
