--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "vue": "^2.5.21",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-router": "^3.0.1",
+    "vuetify": "^1.4.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
